# ai_learning_platform

./: .env.example  .gitignore  DESIGN.md  README.md  package-lock.json  package.json  pyproject.toml  start_mac.command  start_windows.bat
app/: bootstrap.py  config.py  database.py  main.py  models.py  seed_from_excel.py
app/routers/: dashboard.py  exercises.py  learning.py  quizzes.py  resources.py  runtime.py  settings.py
app/services/: ai_grader.py  exercise_checker.py  exercise_guidance.py  progress.py  quiz_bank.py  quiz_grader.py  resource_catalog.py  runtime_lifecycle.py  user_data.py
app/static/: app.js  styles.css
app/templates/: base.html  dashboard.html  day_detail.html  exercise.html  learning_plan.html  module_detail.html  quiz.html  quiz_result.html  resources.html  settings.html
data/source/: 70天AI入门到微调进阶学习(附带打卡).xlsx
scripts/: start_app.py  start_windows_hidden.vbs
tests/: test_ai_grader.py  test_bootstrap.py  test_exercise_checker.py  test_exercise_guidance.py  test_packaging.py  test_progress.py  test_quiz_bank.py  test_quiz_grader.py  test_resource_catalog.py  test_routes_smoke.py  test_seed_from_excel.py  test_start_app.py
