[project]
name = "ai-learning-platform"
version = "0.1.0"
description = "Local 70-day AI learning platform with SQLite progress tracking"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "python-dotenv>=1.0.1",
  "openpyxl>=3.1.5",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*", "scripts*", "node_modules*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
